FINERACT-1968: Support horizontal and vertical installment processing